source/stylesheets/cart.css.sass
@import 'config'

#cart .cart_holder
  display: none
  
#cart footer
  padding-bottom: 60px

.cart_form
  +pie-clearfix
  margin: 0 auto
  max-width: 1200px
  
  .errors
    margin: 0 auto 40px auto
    max-width: 540px
    width: 100%
    
.cart_items
  float: left
  max-width: 60%
  width: 100%
  
  @media screen and (max-width: $break-extra-large)
    max-width: 50%
    
  @media screen and (max-width: $break-medium)
    max-width: 55%
  
  @media screen and (max-width: $break-small)
    float: none
    max-width: 100%
  
  li
    +pie-clearfix
    +transform(translateZ(0px))
    display: block
    font-size: 14px
    height: 200px
    line-height: 15px
    overflow: hidden
    padding-bottom: 40px
    
    a.item_image
      +vertical-align
      float: left
      height: 100%
      margin-right: 40px
      max-height: 200px
      max-width: 200px
      overflow: hidden
      text-align: center
      width: 100%
      
      @media screen and (max-width: $break-extra-large)
        margin-right: 20px
        max-width: 150px
        max-height: 150px
        
      @media screen and (max-width: $break-medium)
        max-width: 120px
        max-height: 120px

      img
        +vertical-align
        display: block
        height: auto
        margin: 0 auto
        width: 100%
      
    .item_details
      +vertical-align
      font-family: $primary-font  
      float: left
      max-width: 300px
      width: auto
      
      @media screen and (max-width: $break-extra-large)
        max-width: 55%
      
      @media screen and (max-width: $break-small)
        max-width: 65%

      a
        color: $primary-text-color
        display: block
        font-size: 18px
        line-height: 20px
        
        @media screen and (max-width: $break-small)
          font-size: 14px
          line-height: 16px
      
        > span
          color: $secondary-text-color
          display: block
          font-family: $secondary-font
          font-size: 14px
          line-height: 1.3em
          margin-top: 6px
          
          @media screen and (max-width: $break-small)
            margin-top: 2px
          
    .qty_holder
      +pie-clearfix
      margin-top: 20px
      
      button
        +border-radius(3ex)
        +transform(translateZ(0px))
        background: none
        border: 2px solid $border-color
        color: $secondary-text-color
        float: left
        height: 40px
        line-height: normal
        width: 40px
        
        @media screen and (max-width: $break-small)
          height: 32px
          width: 32px
        
        svg
          fill: $secondary-text-color
          height: 20px
          position: relative
          top: 2px
          width: 20px
        
      input
        +appearance(none)
        background: none
        border: none
        color: $secondary-text-color
        float: left
        font-size: 15px
        height: 40px
        text-align: center
        width: 60px
        
        @media screen and (max-width: $break-small)
          height: 32px
        
        &:focus
          box-shadow: none
          outline: none
    
.cart_info
  border: 2px solid $border-color
  color: $secondary-text-color
  float: right
  max-width: 400px
  padding: 45px 40px 20px 40px
  position: -webkit-sticky
  position: sticky
  text-align: center
  top: 110px
  width: 100%
  
  @media screen and (max-width: $break-large)
    max-width: 40%
  
  h3, h4
    margin-bottom: 20px
    text-align: left
    
    >span
      float: right
  h3
    color: $primary-text-color
    font-size: 26px
        
  h4
    font-size: 13px
      
  button, .button
    max-width: 100%
  
  @media screen and (max-width: $break-small)
    border: none
    float: none
    max-width: 100%
    padding: 45px 0
  
  .continue_shopping
    background: none
    color: $secondary-text-color
    font-size: 12px
    margin-top: 20px
    
    @media screen and (max-width: $break-small)
      font-size: 14px
    
  .cart_shipping
    .select
      max-width: 100%
      
  .cart_discounts
    border: 2px solid $border-color
    font-size: 14px
    height: 60px
    line-height: 56px
    margin-bottom: 40px
    padding: 0 10px
    text-align: left
    
    input
      +appearance(none)
      +border-radius(0)
      background: none
      border: none
      font-size: 14px
      height: 56px
      line-height: 56px
      text-align: left
      width: 240px
      
      &::-ms-clear
        height: 0
        width: 0
      
      &:active, &:focus
        outline: none
        
    .cancel_discount
      float: right
      margin-top: 10px
      
      svg
        fill: $secondary-text-color
        height: 20px
        width: 20px
      
.cart_empty_message
  text-align: center
  
  p
    margin: 80px 0
    
  svg
    fill: $secondary-text-color
    height: 40px
    width: 40px

